--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,11 +16,22 @@
   			<param-value>/WEB-INF/struts-config.xml</param-value>
 		</init-param>
   </servlet>
+  
+  <filter>
+  	<filter-name>MyFilter1</filter-name>
+  	<filter-class>com.hsp.filters.MyFilter1</filter-class>
+  </filter>
+  
+  <filter-mapping>
+  	<filter-name>MyFilter1</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
   	
   <servlet-mapping>
   	<servlet-name>action</servlet-name>
   	<url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  
   
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
